@@ -49,19 +49,24 @@ are described <a href="#prev-vers">here</a>.
 Information about older versions may be found <a href="http://pwsafe.org/history.shtml">here</a>.</p>
 <hr style="width: 100%; height: 2px;">
 <h3>Version V3.23.1</h3>
-<h4><a name="V3.23.1New"></a>New Features for
-V3.23.1</h4>
+<h4><a name="V3.23.1New"></a>New Features for V3.23.1</h4>
 <table>
 <tbody align="left" valign="top">
 <tr>
-<td align="center" width="100"><a href="nojs.html" onclick="FR(3022827);return false;"><br>
-</a></td>
-<td></td>
+<td align="center" width="100"><a href="nojs.html" onclick="FR(3062809);return false;">3062809</a></td>
+<td>Add "Add Group" to Toolbar.</td>
+<tr>
+</tr>
+<td align="center" width="100"><a href="nojs.html" onclick="FR(3062788);return false;">3062788</a></td>
+<td>Add "Add New Entry" menu item to additional context menus.</td>
+</tr>
+<tr>
+<td align="center" width="100">n/a</td>
+<td>Online help is now available in Spanish, thanks to Jose.</td>
 </tr>
 </tbody>
 </table>
-<h4><a name="V3.23.1Changes"></a>Changes to
-Existing Features in V3.23.1</h4>
+<h4><a name="V3.23.1Changes"></a>Changes to Existing Features in V3.23.1</h4>
 <table>
 <tbody align="left" valign="top">
 <tr>
@@ -72,11 +77,14 @@ Existing Features in V3.23.1</h4>
 </tr>
 </tbody>
 </table>
-<h4><a name="V3.23.1BugsFixed"></a>Bugs fixed
-in
-V3.23.1</h4>
+<h4><a name="V3.23.1BugsFixed"></a>Bugs fixed in V3.23.1</h4>
 <table>
 <tbody align="left" valign="top">
+<tr>
+<td align="center" width="100"><a href="nojs.html" onclick="FR(3062758);return false;">3062758</a></td>
+<td>Groups list in Add/Edit dialog box no longer "remembers"
+groups from previously opened database.</td>
+</tr>
 <tr>
 <td align="center" width="100">n/a</td>
 <td>Spanish translations for installer and application updated - thanks to Jose.</td>
@@ -86,8 +94,7 @@ V3.23.1</h4>
 <hr style="width: 100%; height: 2px;"><span style="text-decoration: underline;"><span style="font-weight: bold;"></span></span>
 <h2><a name="prev-vers"></a>Previous Versions Described in this Document</h2>
 <ul>
-<li><a href="ReleaseNotes.html#V3.23">V3.23</a>
-Released 2010-07-26</li>
+<li><a href="ReleaseNotes.html#V3.23">V3.23</a>Released 2010-07-26</li>
 <ul>
 <li><a href="ReleaseNotes.html#V3.23New">New Features</a></li>
 <li><a href="ReleaseNotes.html#V3.23Changes">Changes to Existing Features</a></li>
