@@ -1552,6 +1552,9 @@ IDB_REDO_NEW_D          BITMAP                  "..\\graphics\\toolbar\\new\\red
 IDB_SYNCHRONIZE_CLASSIC BITMAP                  "..\\graphics\\toolbar\\classic\\synchronize.bmp"
 IDB_SYNCHRONIZE_NEW     BITMAP                  "..\\graphics\\toolbar\\new\\synchronize.bmp"
 IDB_SYNCHRONIZE_NEW_D   BITMAP                  "..\\graphics\\toolbar\\new\\synchronize_disabled.bmp"
+IDB_ADDGROUP_CLASSIC    BITMAP                  "..\\graphics\\toolbar\\classic\\addgroup.bmp"
+IDB_ADDGROUP_NEW        BITMAP                  "..\\graphics\\toolbar\\new\\addgroup.bmp"
+IDB_ADDGROUP_NEW_D      BITMAP                  "..\\graphics\\toolbar\\new\\addgroup_disabled.bmp"
 
 /////////////////////////////////////////////////////////////////////////////
 //
